2013-03-07  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled Chromium DEPS to r186592.  Requested by
        "Dana Jansens" <danakj@chromium.org> via sheriffbot.

        * DEPS:

2013-03-07  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Update some #includes for WebVideoFrame.h
        https://bugs.webkit.org/show_bug.cgi?id=111739

        Reviewed by James Robinson.

        In anticipation of removing WebVideoFrame.h from WK/chromium/public/.

        * public/WebMediaPlayer.h:

2013-03-07  Dana Jansens  <danakj@chromium.org>

        [chromium] Remove WebView's sharedGraphicsContext3D method.
        https://bugs.webkit.org/show_bug.cgi?id=111499

        Reviewed by James Robinson.

        * public/WebView.h:
        (WebView):
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:
        (WebViewImpl):

2013-03-07  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Support a shortcut for reloading front-end in debug mode.
        https://bugs.webkit.org/show_bug.cgi?id=111709

        Reviewed by Pavel Feldman.

        * src/js/DevTools.js:

2013-03-07  Alexei Filippov  <alph@chromium.org>

        Web Inspector: Add more diagnostics output to testRendererProcessNativeMemorySize
        https://bugs.webkit.org/show_bug.cgi?id=111599

        Reviewed by Yury Semikhatsky.

        Add the process size to the test output.

        * src/js/Tests.js:

2013-03-07  Jochen Eisinger  <jochen@chromium.org>

        [chromium] expose UserGestureToken via WebKit API so PPAPI plugins can correctly consume it
        https://bugs.webkit.org/show_bug.cgi?id=104268

        Reviewed by Darin Fisher.

        Currently, the PPAPI creates a WebScopedUserGesture up to 10 seconds
        after a call with an currently active user gesture was made. It should
        use the newly added WebUserGestureToken to make sure this user gesture
        is not consumed multiple times.
