@@ -1,3 +1,15 @@
+2013-03-07  Mark Pilgrim  <pilgrim@chromium.org>
+
+        [Chromium] Remove WK/chromium/public/WebWorkerRunLoop.h
+        https://bugs.webkit.org/show_bug.cgi?id=111740
+
+        Reviewed by James Robinson.
+
+        No longer needed; all references have been updated to new version
+        in top-level Platform/ directory.
+
+        * public/WebWorkerRunLoop.h: Removed.
+
 2013-03-07  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed.  Rolled Chromium DEPS to r186592.  Requested by
